--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,12 +33,14 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Logiquiz
 excludes=
+file.reference.mysql-connector-java-8.0.28.jar=C:\\Users\\rodri\\Documents\\NetBeansProjects\\PiProject\\lib\\mysql-connector-java-8.0.28.jar
 file.reference.mysql-connector-java-8.0.29.jar=C:\\Users\\trevi\\Downloads\\mysql-connector-java-8.0.29\\mysql-connector-java-8.0.29.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mysql-connector-java-8.0.29.jar}:\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.mysql-connector-java-8.0.28.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
