--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\rodri\\AppData\\Roaming\\NetBeans\\12.5\\build.properties
+user.properties.file=C:\\Users\\trevi\\AppData\\Roaming\\NetBeans\\12.6\\build.properties
