--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=Logiquiz
+application.vendor=Luigi
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,6 +33,7 @@ dist.jar=${dist.dir}/Logiquiz.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Logiquiz
+endorsed.classpath=
 excludes=
 file.reference.mysql-connector-java-8.0.28.jar=C:\\Users\\rodri\\Documents\\NetBeansProjects\\PiProject\\lib\\mysql-connector-java-8.0.28.jar
 file.reference.mysql-connector-java-8.0.29.jar=C:\\Users\\trevi\\Downloads\\mysql-connector-java-8.0.29\\mysql-connector-java-8.0.29.jar
